--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -26,13 +29,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body {
+  height: 100%;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  font-family: "Nunito", sans-serif;
 }
+
 
 h1 {
   font-size: 3.2em;
